fix(VAppBar): use correct transform with extended and **scroll-off-screen** prop
fixes #4985

--- a/packages/vuetify/src/components/VToolbar/VToolbar.sass
+++ b/packages/vuetify/src/components/VToolbar/VToolbar.sass
@@ -56,7 +56,8 @@
     &:last-child
       margin-right: -16px
 
-.v-toolbar__content
+.v-toolbar__content,
+.v-toolbar__extension
   align-items: center
   display: flex
 
